--- a/html_projects_with_css/samah_assignment11/css/style.css
+++ b/html_projects_with_css/samah_assignment11/css/style.css
@@ -71,6 +71,7 @@ div.container-cat:hover  div.content{
 
 
 div.container-dog {
+    margin-left: 2%;
     margin-top: -150px;
     width: 30%;
     display: inline-block;
@@ -86,7 +87,7 @@ div.container-dog div.content {
     position:absolute;
     bottom:100%;
     color: aliceblue;
-    padding-top: 25%;
+    padding-top: 50%;
     text-align: center;
     opacity: 0.7;
     /* transition: bottom 2s ease-in-out .35s,  transform 1s ease-in-out; */
