--- a/html_projects_with_css/samah_assignment_13/assets/css/style.css
+++ b/html_projects_with_css/samah_assignment_13/assets/css/style.css
@@ -28,20 +28,22 @@ header {
       font-weight: 800;
   }
   nav img {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
   }
 main {
     height: 100%;
     width: 80%;
     margin: auto;
+    padding-block-start: 3%;
+
 }
 /* Main Styling */
 main section {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     width: 100%;
     height: 100%;
 }
